--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<tui-root>
+
+    <app-authorization-form></app-authorization-form>
+</tui-root>
