--- a/src/app/components/authorization-form/authorization-form.component.less
+++ b/src/app/components/authorization-form/authorization-form.component.less
@@ -1,3 +1,13 @@
 :host {
-  display: block;
+    display: flex;
+    justify-content: center;
+}
+
+.authorization-form {
+    width: 50%;
+    max-width: 400px;
+
+    @media screen and (max-width: 47.9625em) {
+        width: 90%;
+    }
 }
