--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,8 @@
         <header class="header">
             <h2 class="tui-text_h3 title">Kinoha</h2>
             <tui-tabs class="tabs">
-                <a tuiTab routerLink="/film-cards" routerLinkActive="active">
-                    Главная
-                </a>
-                <a tuiTab routerLink="authorization" routerLinkActive="active">
+                <a tuiTab routerLink="/" routerLinkActive="active"> Главная </a>
+                <a tuiTab routerLink="/authorization" routerLinkActive="active">
                     Вернуться в деревню
                 </a>
             </tui-tabs>
