--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     box-shadow: inset 0 -1px rgba(255, 255, 255, 0.24);
+    padding: 16px;
 }
 
 .tabs {
