--- a/src/app/components/film-cards/film-cards.component.less
+++ b/src/app/components/film-cards/film-cards.component.less
@@ -2,7 +2,7 @@
 
 :host {
     display: grid;
-    grid-template-columns: repeat(4, 16%);
+    grid-template-columns: repeat(4, 1fr);
     // grid-auto-flow: row;
     gap: 8px;
 
