feat: рефакторинг и добавление загрузки жанров

--- a/src/app/pages/film-list-page/filters/genres-filter/genres-filter.component.html
+++ b/src/app/pages/film-list-page/filters/genres-filter/genres-filter.component.html
@@ -1,15 +1,19 @@
+@let genres = genres$ | async;
+
 <div>
-    <h3>Жанр:</h3>
+    <h3>По жанру:</h3>
     <tui-multi-select
         [formControl]="control"
         [tuiTextfieldLabelOutside]="true"
         [(search)]="search"
+        [stringify]="stringify"
     >
         Выберите жанр
         <tui-data-list-wrapper
             *tuiDataList
             tuiMultiSelectGroup
-            [items]="filter(search)"
+            [itemContent]="stringify | tuiStringifyContent"
+            [items]="filter(search, genres || [])"
         />
     </tui-multi-select>
 </div>
