--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,6 @@
 <tui-root>
+    <app-header></app-header>
     <div class="film-service-container">
-        <header class="header">
-            <h2 class="tui-text_h3 title">Kinoha</h2>
-            <tui-tabs class="tabs">
-                <a
-                    tuiTab
-                    routerLink="/"
-                    routerLinkActive="active"
-                    [routerLinkActiveOptions]="{ exact: true }"
-                    >Главная</a
-                >
-                <a tuiTab routerLink="/authorization" routerLinkActive="active"
-                    >Вернуться в деревню</a
-                >
-            </tui-tabs>
-        </header>
         <div class="page-container">
             <router-outlet></router-outlet>
         </div>
