feat: add dates filter

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,10 +7,10 @@
             routerLink="/"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
-            >Главная</a
+            >Фильмы</a
         >
         <a tuiTab routerLink="/authorization" routerLinkActive="active"
-            >Вернуться в деревню</a
+            >Войти</a
         >
     </tui-tabs>
 </header>
