--- a/src/app/pages/film-list-page/filters/genres-filter/genres-filter.component.html
+++ b/src/app/pages/film-list-page/filters/genres-filter/genres-filter.component.html
@@ -3,6 +3,7 @@
 <div>
     <h3>По жанру:</h3>
     <tui-multi-select
+        tuiTextfieldSize="m"
         [formControl]="control"
         [tuiTextfieldLabelOutside]="true"
         [(search)]="search"
