--- a/src/app/pages/film-list-page/film-cards/film-card/film-card.component.less
+++ b/src/app/pages/film-list-page/film-cards/film-card/film-card.component.less
@@ -1,31 +1,44 @@
 @import '@taiga-ui/core/styles/taiga-ui-local.less';
 
-.overlay {
-    &::after {
-        opacity: 0;
-        background: linear-gradient(
-            -45deg,
-            #a1a1b3 0.36%,
-            #d4d1d8 46.96%,
-            #f7fafa 67.14%,
-            #d4d1d8 83.19%,
-            #a1a1b3 93.03%
-        );
-    }
+:host {
+    display: flex;
+    flex-direction: column;
+    width: 140px;
 
-    @media (hover: hover) and (pointer: fine) {
-        &:hover::after {
-            opacity: 0.5;
+    &:hover {
+        .film-card::after {
+            opacity: 1;
         }
-    }
-
-    &:active::after {
-        opacity: 1;
     }
 }
 
-.film-card {
-    width: 140px;
+.poster {
+    display: block;
+    width: 100%;
     height: 210px;
-    background-color: beige;
+    transition: opacity 0.15s ease-in-out;
+}
+
+.film-card {
+    position: relative;
+
+    &:after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        content: '';
+        background-color: rgba(0, 0, 0, 0.15);
+        opacity: 0;
+    }
+}
+
+.film-title {
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-height: 18px;
 }
