--- a/src/app/pages/film-list-page/filters/filters.component.less
+++ b/src/app/pages/film-list-page/filters/filters.component.less
@@ -1,4 +1,12 @@
 :host {
     display: block;
+    flex-grow: 1;
+    flex-shrink: 0;
+    min-width: 0;
+    margin-right: 24px;
     width: 26%;
+
+    @media screen and (max-width: 47.9625em) {
+        display: none;
+    }
 }
