refactor: исправления по ревью

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <h2 class="tui-text_h3 title">Kinoha</h2>
+    <span class="tui-text_h1">Kinoha</span>
 
     <tui-tabs class="tabs">
         <a
