--- a/src/app/pages/film-list-page/film-cards/film-cards.component.less
+++ b/src/app/pages/film-list-page/film-cards/film-cards.component.less
@@ -1,15 +1,17 @@
-:host {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-}
-
 .skeleton-card {
     width: 140px;
     height: 210px;
 }
 
-// .skeleton-title {}
+.skeleton-title {
+    width: 140px;
+}
+
+.film-list-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+}
 
 tui-pagination ::ng-deep .t-button {
     inline-size: auto;
