--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <tui-root>
-    <app-header></app-header>
-    <div class="film-service-container">
-        <div class="page-container">
-            <router-outlet></router-outlet>
+    <div class="app-container">
+        <app-header></app-header>
+        <div class="film-service-container">
+            <div class="page-container">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
 </tui-root>
