--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -2,6 +2,10 @@
     display: block;
 }
 
+.app-container {
+    background-color: var(--tui-background-base-alt);
+}
+
 .film-service-container {
     margin: auto;
 }
