--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -3,19 +3,8 @@
 .header {
     display: flex;
     align-items: center;
-    box-shadow: inset 0 -1px rgba(255, 255, 255, 0.24);
-    padding: 16px;
-    background-color: rgb(218, 214, 214);
-    color: rgb(48, 91, 99);
-}
-
-.title {
-    min-inline-size: 15.625rem;
-    margin: 0;
-}
-
-.tabs {
-    inline-size: ~'calc(100% - 15.625rem)';
-    justify-content: flex-end;
-    box-shadow: none;
+    justify-content: space-between;
+    padding: 0 16px;
+    background-color: var(--tui-background-neutral-2);
+    color: var(--tui-text-primary);
 }
