--- a/src/app/pages/film-list-page/film-cards/film-card/film-card.component.less
+++ b/src/app/pages/film-list-page/film-cards/film-card/film-card.component.less
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     width: 140px;
+    cursor: pointer;
 
     &:hover {
         .film-card::after {
@@ -16,7 +17,7 @@
     display: block;
     width: 100%;
     height: 210px;
-    transition: opacity 0.15s ease-in-out;
+    background-color: var(--tui-background-neutral-1);
 }
 
 .film-card {
@@ -30,15 +31,14 @@
         width: 100%;
         height: 100%;
         content: '';
-        background-color: rgba(0, 0, 0, 0.15);
+        background-color: var(--tui-border-hover);
         opacity: 0;
+        transition: opacity 0.15s ease-in-out;
     }
 }
 
-.film-title {
-    display: -webkit-box;
-    overflow: hidden;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    line-height: 18px;
+.loader {
+    display: flex;
+    inline-size: fit-content;
+    margin: 1rem 0;
 }
