--- a/src/app/pages/film-list-page/film-cards/film-cards.component.html
+++ b/src/app/pages/film-list-page/film-cards/film-cards.component.html
@@ -4,17 +4,20 @@
 <!--prettier криво форматирует-->
 
 @if (isLoading) {
-    @for (index of 20 | tuiRepeatTimes; track index) {
-        <div>
-            <div class="skeleton-card" [tuiSkeleton]="true"></div>
-            <div class="skeleton-title" tuiSkeleton="This text serves as the cont">
-        </div>
+    <div class="film-list-wrapper">
+        @for (index of 20 | tuiRepeatTimes; track index) {
+            <div>
+                <div class="skeleton-card" [tuiSkeleton]="true"></div>
+                <div  class="skeleton-title" tuiSkeleton="Thistextwillbereplacedby a skeleton"></div>
+            </div>
+        }
     </div>
-    }
 } @else {
-    @for (film of films; track film.id) {
-    <app-film-card [data]="film"></app-film-card>
-    }
+    <div class="film-list-wrapper">
+        @for (film of films; track film.id) {
+            <app-film-card [data]="film"></app-film-card>
+        }
+    </div>
     <tui-pagination
         [index]="index"
         [length]="totalPages || 0"
