refactor: исправления по ревью

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -6,10 +6,10 @@
     background-color: var(--tui-background-base-alt);
 }
 
-.film-service-container {
-    margin: auto;
-}
-
 .page-container {
     margin-top: 60px;
+
+    @media screen and (max-width: 47.9625em) {
+        margin: 0;
+    }
 }
