--- a/src/app/pages/film-list-page/film-list-page.component.less
+++ b/src/app/pages/film-list-page/film-list-page.component.less
@@ -3,4 +3,8 @@
     justify-content: space-between;
     padding-left: 16px;
     padding-right: 16px;
+
+    @media screen and (max-width: 47.9625em) {
+        flex-direction: column;
+    }
 }
