--- a/src/app/pages/film-list-page/filters/filters.component.less
+++ b/src/app/pages/film-list-page/filters/filters.component.less
@@ -7,6 +7,8 @@
     width: 26%;
 
     @media screen and (max-width: 47.9625em) {
-        display: none;
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 24px;
     }
 }
