--- a/src/app/pages/film-list-page/film-cards/film-card/film-card.component.less
+++ b/src/app/pages/film-list-page/film-cards/film-card/film-card.component.less
@@ -18,6 +18,8 @@
     width: 100%;
     height: 210px;
     background-color: var(--tui-background-neutral-1);
+    color: transparent;
+    user-select: none;
 }
 
 .film-card {
