--- a/src/app/pages/film-list-page/film-cards/film-card/film-card.component.html
+++ b/src/app/pages/film-list-page/film-cards/film-card/film-card.component.html
@@ -1,15 +1,13 @@
-<div class="film-card" [tuiSkeleton]="isLoading">
-    <img
-        class="poster"
+<a class="card-wrapper" [routerLink]="'/film/' + data.id">
+    <app-poster
+        class="poster film-card"
         [alt]="data.title"
-        [src]="'https://image.tmdb.org/t/p/w500/' + data.poster_path"
-        (load)="onLoad()"
-        (error)="onError()"
-    />
-</div>
+        [path]="data.poster_path">
+    </app-poster>
 
-<tui-line-clamp
-    [content]="data.title"
-    [lineHeight]="20"
-    [linesLimit]="2"
-/>
+    <tui-line-clamp
+        [content]="data.title"
+        [lineHeight]="20"
+        [linesLimit]="2"
+    />
+</a>
