feat: add actors list

--- a/src/app/pages/film-page/film-actors/film-actors.component.less
+++ b/src/app/pages/film-page/film-actors/film-actors.component.less
@@ -1,3 +1,13 @@
 :host {
     display: block;
 }
+
+.actor-name {
+    font: var(--tui-font-text-ui-s);
+}
+
+.actor-character {
+    font: var(--tui-font-text-ui-xs);
+    color: var(--tui-text-tertiary);
+    margin-bottom: 4px;
+}
