--- a/src/app/pages/film-page/film-actors/film-actors.component.html
+++ b/src/app/pages/film-page/film-actors/film-actors.component.html
@@ -1,9 +1,7 @@
 <div class="film-cast">
-    Актёры:
-    <div>
-        @for (actor of actors; track actor.id) {
-            <div>{{actor.name}}</div>
-            <div>{{actor.character}}</div>
-        }
-    </div>
+    <div class="tui-text_h6 tui-space_bottom-4">Актёры:</div>
+    @for (actor of actors | tuiMapper : getTop10; track actor.id) {
+        <div class="tui-space_top-1 actor-name">{{actor.name}}</div>
+        <div class="actor-character">{{actor.character}}</div>
+    }
 </div>
