--- a/src/app/pages/film-page/film-info/film-info.component.less
+++ b/src/app/pages/film-page/film-info/film-info.component.less
@@ -1,6 +1,5 @@
 :host {
-    display: flex;
-    width: 100%;
+    display: block;
 }
 
 .film-info-wrapper {
@@ -19,12 +18,8 @@
 
 .film-info-title {
     width: 160px;
-    font-size: 13px;
-    line-height: 18px;
 }
 
 .film-info-value {
     flex-grow: 1;
-    // flex-shrink: 1;
-    // flex-basis: 0%;
 }
