--- a/src/app/pages/film-page/film-actors/film-actors.component.html
+++ b/src/app/pages/film-page/film-actors/film-actors.component.html
@@ -1,7 +1,11 @@
+<div class="tui-text_h6 tui-space_bottom-4 tui-space_top-1">Актёры:</div>
 <div class="film-cast">
-    <div class="tui-text_h6 tui-space_bottom-4">Актёры:</div>
-    @for (actor of actors | tuiMapper : getTop10; track actor.id) {
-        <div class="tui-space_top-1 actor-name">{{actor.name}}</div>
-        <div class="actor-character">{{actor.character}}</div>
+    @for (actor of actors | tuiMapper: getTop10; track actor.id) {
+        <div class="tui-space_top-1 actor-name">{{ actor.name }}</div>
+        <div class="actor-character">{{ actor.character }}</div>
     }
 </div>
+<a tuiLink class="tui-space_top-2 tui-text_body-s">
+    Всего {{ actors.length }}
+    {{ actors.length | tuiMapper: pluralize : ['актер', 'актера', 'актеров'] }}
+</a>
