--- a/src/app/pages/film-page/film-trailer/film-trailer.component.less
+++ b/src/app/pages/film-page/film-trailer/film-trailer.component.less
@@ -2,15 +2,16 @@
 
 :host {
     display: block;
-    flex-grow: 1;
+    aspect-ratio: 16 / 9;
+    width: 50%;
     flex-shrink: 0;
-    min-width: 0;
-    margin-right: 24px;
-    width: 26%;
 
     @media @tui-mobile {
         width: 100%;
-        margin-right: 4px 0 4px 0;
-        margin-bottom: 24px;
     }
+}
+
+.film-trailer {
+    width: 100%;
+    height: 100%;
 }
