feat: добавлены скелетоны

--- a/src/app/components/film-card/film-card.component.less
+++ b/src/app/components/film-card/film-card.component.less
@@ -34,3 +34,12 @@
         transition: opacity 0.15s ease-in-out;
     }
 }
+
+.skeleton-card {
+    width: 100%;
+    aspect-ratio: 2 / 3;
+}
+
+.skeleton-title {
+    width: 100%;
+}
