--- a/src/app/pages/film-page/film-page.component.less
+++ b/src/app/pages/film-page/film-page.component.less
@@ -41,3 +41,52 @@
     padding: 0 16px;
     justify-content: space-between;
 }
+
+.recommendation-list__item {
+    flex: 1;
+}
+
+.poster-skeleton {
+    width: 300px;
+    aspect-ratio: 2 / 3;
+}
+
+.info-skeleton {
+    flex: 1;
+}
+
+.actors-skeleton {
+    width: 120px;
+}
+
+.trailer-skeleton {
+    display: block;
+    aspect-ratio: 16 / 9;
+    width: 50%;
+    flex-shrink: 0;
+
+    @media @tui-mobile {
+        width: 100%;
+    }
+}
+
+.synopsis-skeleton {
+    width: 50%;
+}
+
+.recommendations-title-skeleton {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+
+.card-skeleton {
+    width: 100%;
+    aspect-ratio: 2 / 3;
+}
+
+.title-skeleton {
+    width: 100%;
+}
