--- a/src/app/components/film-card/film-card.component.html
+++ b/src/app/components/film-card/film-card.component.html
@@ -1,22 +1,6 @@
-@if (!showSkeleton) {
-    <a
-        class="card-wrapper"
-        [routerLink]="'/film/' + data.id"
-        [tuiSkeleton]="showSkeleton"
-    >
-        <app-poster class="poster" [alt]="data.title" [path]="data.poster_path">
-        </app-poster>
+<a class="card-wrapper" [routerLink]="'/film/' + data.id">
+    <app-poster class="poster" [alt]="data.title" [path]="data.poster_path">
+    </app-poster>
 
-        <tui-line-clamp
-            [content]="data.title"
-            [lineHeight]="20"
-            [linesLimit]="2"
-        />
-    </a>
-} @else {
-    <div class="skeleton-card" [tuiSkeleton]="true"></div>
-    <div
-        class="skeleton-title"
-        tuiSkeleton="Thistextwillbereplacedby a skeleton"
-    ></div>
-}
+    <tui-line-clamp [content]="data.title" [lineHeight]="20" [linesLimit]="2" />
+</a>
