--- a/src/app/pages/film-list-page/film-cards/film-cards.component.html
+++ b/src/app/pages/film-list-page/film-cards/film-cards.component.html
@@ -17,11 +17,7 @@
 } @else {
     <div class="film-list-wrapper">
         @for (film of films; track film.id) {
-            <app-film-card
-                class="film-card"
-                [data]="film"
-                [showSkeleton]="false"
-            ></app-film-card>
+            <app-film-card class="film-card" [data]="film"></app-film-card>
         }
     </div>
     <tui-pagination
