fix: Исправлены загрузка фильма и отображение скелетонов

--- a/src/app/pages/film-page/film-page.component.html
+++ b/src/app/pages/film-page/film-page.component.html
@@ -1,6 +1,7 @@
 @let film = film$ | async;
+@let isLoading = isLoading$ | async;
 
-@if (film) {
+@if (!isLoading && film) {
     <div class="film-row">
         <div>
             <app-poster
