feat: добавлена авторизация

--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -8,3 +8,12 @@
     background-color: var(--tui-background-neutral-1-pressed);
     color: var(--tui-text-primary);
 }
+
+.navigation {
+    display: flex;
+    align-items: center;
+}
+
+.avatar {
+    margin-left: 8px;
+}
