--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,16 +1,30 @@
+@let account = account$ | async;
 <header class="header">
     <span class="tui-text_h1">Kinoha</span>
-
-    <tui-tabs class="tabs">
-        <a
-            tuiTab
-            routerLink="/"
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-            >Фильмы</a
-        >
-        <a tuiTab routerLink="/authorization" routerLinkActive="active"
-            >Войти</a
-        >
-    </tui-tabs>
+    <div class="navigation">
+        <tui-tabs class="tabs">
+            <a
+                tuiTab
+                routerLink="/"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+                >Фильмы</a
+            >
+            <a tuiTab routerLinkActive="active" (click)="openAuthWindow()"
+                >Войти</a
+            >
+        </tui-tabs>
+        @if (account) {
+            <tui-avatar
+                class="avatar"
+                size="m"
+                [src]="
+                    'https://image.tmdb.org/t/p/w500/' +
+                        account.avatar.tmdb.avatar_path
+                        | tuiFallbackSrc: '@tui.user'
+                        | async
+                "
+            />
+        }
+    </div>
 </header>
