--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,30 +1,26 @@
 @let account = account$ | async;
+@let accountLoading = accountLoading$ | async;
+
 <header class="header">
     <span class="tui-text_h1">Kinoha</span>
     <div class="navigation">
-        <tui-tabs class="tabs">
-            <a
-                tuiTab
-                routerLink="/"
-                routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"
-                >Фильмы</a
-            >
-            <a tuiTab routerLinkActive="active" (click)="openAuthWindow()"
-                >Войти</a
-            >
-        </tui-tabs>
-        @if (account) {
-            <tui-avatar
-                class="avatar"
-                size="m"
-                [src]="
-                    'https://image.tmdb.org/t/p/w500/' +
-                        account.avatar.tmdb.avatar_path
-                        | tuiFallbackSrc: '@tui.user'
-                        | async
-                "
-            />
+        <a appearance="action" tuiButton routerLink="/" size="m"> Фильмы </a>
+
+        @if (accountLoading) {
+            <tui-avatar size="m" [tuiSkeleton]="true" />
+        } @else {
+            @if (account) {
+                <app-account-button [account]="account"></app-account-button>
+            } @else {
+                <button
+                    appearance="flat"
+                    tuiButton
+                    type="button"
+                    (click)="openAuthWindow()"
+                >
+                    Войти
+                </button>
+            }
         }
     </div>
 </header>
