--- a/src/app/pages/film-list-page/film-list-page.component.html
+++ b/src/app/pages/film-list-page/film-list-page.component.html
@@ -1,2 +1,7 @@
 <app-filters></app-filters>
-<app-film-cards></app-film-cards>
+<app-film-cards
+    [films]="(films$ | async)!"
+    [isLoading]="(isLoading$ | async)!"
+    [totalPages]="(totalPages$ | async)!"
+    (pageChanged)="onPageChaned($event)"
+></app-film-cards>
