--- a/src/app/pages/film-list-page/film-list-page.component.less
+++ b/src/app/pages/film-list-page/film-list-page.component.less
@@ -3,8 +3,7 @@
 :host {
     display: flex;
     justify-content: space-between;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 60px 16px 0;
 
     @media @tui-mobile {
         flex-direction: column;
