--- a/src/app/pages/film-page/film-page.component.less
+++ b/src/app/pages/film-page/film-page.component.less
@@ -2,7 +2,7 @@
 
 :host {
     display: block;
-    padding-bottom: 60px;
+    padding: 60px 0;
 }
 
 .film-row {
@@ -30,10 +30,13 @@
     width: 300px;
 }
 
+.icon-button {
+    border-radius: 40px;
+}
+
 .synopsis {
     text-align: justify;
 }
-
 .recommendations-title {
     width: 100%;
     text-align: center;
