feat: добавлены оценка фильма, 404 страница и гард авторизации

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<tui-root>
+<tui-root class="app-root">
     <div class="app-container">
         <app-header></app-header>
         <div class="page-container">
