--- a/src/app/pages/film-list-page/film-list-page.component.less
+++ b/src/app/pages/film-list-page/film-list-page.component.less
@@ -4,8 +4,10 @@
     display: flex;
     justify-content: space-between;
     padding: 60px 16px 0;
+    background-color: var(--tui-background-base-alt);
 
     @media @tui-mobile {
         flex-direction: column;
+        padding: 0 16px;
     }
 }
