--- a/src/app/pages/film-page/film-page.component.less
+++ b/src/app/pages/film-page/film-page.component.less
@@ -3,6 +3,7 @@
 :host {
     display: block;
     padding: 60px 0;
+    background-color: var(--tui-background-base-alt);
 }
 
 .film-row {
@@ -28,6 +29,17 @@
 
 .poster {
     width: 300px;
+}
+
+.rating-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.rating {
+    fill: currentColor;
+    font-size: 1rem;
+    inline-size: 25rem;
 }
 
 .icon-button {
