--- a/src/app/pages/profile-page/profile-page.component.less
+++ b/src/app/pages/profile-page/profile-page.component.less
@@ -3,6 +3,8 @@
 :host {
     display: block;
     padding: 20px 0;
+    background-color: var(--tui-background-base-alt);
+    padding-top: 20px;
 }
 
 .profile-row {
