--- a/src/app/pages/film-page/film-page.component.html
+++ b/src/app/pages/film-page/film-page.component.html
@@ -17,10 +17,34 @@
         <app-film-actors [actors]="film.credits.cast"></app-film-actors>
     </div>
     @if (account) {
+        @let favorite = film.account_states?.favorite;
+        @let willWatch = film.account_states?.watchlist;
+        @let rated = film.account_states?.rated;
+        @let ratedValue = rated ? rated!.value : 0;
         <div class="film-row">
+            <div class="rating-wrapper">
+                <tui-rating
+                    class="rating"
+                    [max]="10"
+                    [ngModel]="ratedValue"
+                    (ngModelChange)="changeFilmRate($event, film.id)"
+                />
+
+                @if (ratedValue) {
+                    <button
+                        class="icon-button tui-space_left-2"
+                        tuiButton
+                        appearance="neutral"
+                        tuiHintAppearance="dark"
+                        tuiHintDirection="bottom"
+                        tuiHint="Удалить оценку"
+                        (click)="deleteFilmRate(film.id)"
+                    >
+                        <tui-icon icon="@tui.trash"></tui-icon>
+                    </button>
+                }
+            </div>
             <div>
-                @let favorite = film.account_states?.favorite;
-                @let willWatch = film.account_states?.watchlist;
                 <button
                     class="icon-button tui-space_right-2"
                     tuiButton
