refactor: рефакторинг кода

--- a/src/app/components/film-card/film-card.component.less
+++ b/src/app/components/film-card/film-card.component.less
@@ -1,5 +1,6 @@
 :host {
     display: flex;
+    position: relative;
     flex-direction: column;
     cursor: pointer;
 
@@ -35,11 +36,8 @@
     }
 }
 
-.skeleton-card {
-    width: 100%;
-    aspect-ratio: 2 / 3;
-}
-
-.skeleton-title {
-    width: 100%;
+.rating {
+    position: absolute;
+    top: 4px;
+    right: 4px;
 }
