--- a/src/app/components/film-card/film-card.component.html
+++ b/src/app/components/film-card/film-card.component.html
@@ -3,4 +3,13 @@
     </app-poster>
 
     <tui-line-clamp [content]="data.title" [lineHeight]="20" [linesLimit]="2" />
+    @if (data.rating) {
+        <tui-chip
+            class="rating"
+            appearance="accent"
+            iconEnd="@tui.star"
+            size="xs"
+            >{{ data.rating }}</tui-chip
+        >
+    }
 </a>
