--- a/src/app/pages/film-page/film-page.component.html
+++ b/src/app/pages/film-page/film-page.component.html
@@ -17,70 +17,11 @@
         <app-film-actors [actors]="film.credits.cast"></app-film-actors>
     </div>
     @if (account) {
-        @let favorite = film.account_states?.favorite;
-        @let willWatch = film.account_states?.watchlist;
-        @let rated = film.account_states?.rated;
-        @let ratedValue = rated ? rated!.value : 0;
-        <div class="film-row">
-            <div class="rating-wrapper">
-                <tui-rating
-                    class="rating"
-                    [max]="10"
-                    [ngModel]="ratedValue"
-                    (ngModelChange)="changeFilmRate($event, film.id)"
-                />
-
-                @if (ratedValue) {
-                    <button
-                        class="icon-button tui-space_left-2"
-                        tuiButton
-                        appearance="neutral"
-                        tuiHintAppearance="dark"
-                        tuiHintDirection="bottom"
-                        tuiHint="Удалить оценку"
-                        (click)="deleteFilmRate(film.id)"
-                    >
-                        <tui-icon icon="@tui.trash"></tui-icon>
-                    </button>
-                }
-            </div>
-            <div>
-                <button
-                    class="icon-button tui-space_right-2"
-                    tuiButton
-                    appearance="neutral"
-                    tuiHintAppearance="dark"
-                    tuiHintDirection="bottom"
-                    tuiHint="Буду смотреть"
-                    (click)="toggleWatchlist(account!.id, film.id, !willWatch)"
-                >
-                    <tui-icon
-                        [icon]="
-                            willWatch ? '@tui.bookmark-check' : '@tui.bookmark'
-                        "
-                        [style.color]="willWatch ? 'red' : 'inherit'"
-                    ></tui-icon>
-                </button>
-                <button
-                    class="icon-button"
-                    tuiButton
-                    appearance="neutral"
-                    tuiHintAppearance="dark"
-                    tuiHintDirection="bottom"
-                    [tuiHint]="
-                        favorite
-                            ? 'Удалить из избранного'
-                            : 'Добавить в избранное'
-                    "
-                    (click)="toggleFavorite(account!.id, film.id, !favorite)"
-                >
-                    <tui-icon
-                        [icon]="favorite ? '@tui.heart-filled' : '@tui.heart'"
-                        [style.color]="favorite ? 'red' : 'inherit'"
-                    ></tui-icon>
-                </button>
-            </div>
-        </div>
+        <app-film-actions
+            class="film-row"
+            [film]="film"
+            [account]="account"
+        ></app-film-actions>
     }
     <div class="film-row">
         @let trailer = film | tuiMapper: getTrailer;
